# soundwich

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  player_controller.hpp
include/audio_output/: IAudioOutput.hpp  audio_output.hpp
include/decoder/: DecoderFactory.hpp  IDecoder.hpp  SndfileDecoder.hpp
include/player_controller/: PlayerController.hpp
include/playlist_manager/: PlaylistManager.hpp
src/: main.cpp  player_controller.cpp  playlist_manager.cpp
src/audio_output/: PipeWireCore.cpp  PipeWireOutput.cpp  process.cpp
src/decoder/: DecoderFactory.cpp  SndfileDecoder.cpp
src/player_controller/: PlayerController.cpp
src/playlist_manager/: PlaylistManager.cpp
